force-app/main/default/objects/Vesting_Id__mdt/Vesting_Id__mdt.object-meta.xml
<CustomObject>
    <description>Appendix D</description>
    <label>Vesting Id</label>
    <pluralLabel>Vesting Ids</pluralLabel>
</CustomObject>