force-app/main/default/objects/Vesting_Id__mdt/fields/Profit_Sharing_Match_Vesting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing_Match_Vesting_Schedule__c</fullName>
    <label>Profit Sharing_Match Vesting Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>20% Over 6 Years</fullName>
            </value>
            <value>
                <fullName>20% Over 5 Years</fullName>
            </value>
            <value>
                <fullName>25% Over 4 Years</fullName>
            </value>
            <value>
                <fullName>2 Year Cliff</fullName>
            </value>
            <value>
                <fullName>3 Year Cliff</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>6-Year Graded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>